--- a/main.css
+++ b/main.css
@@ -1425,9 +1425,9 @@ html.w-mod-touch * {
 
     .mobile-author-container-1 {
         display: grid;
-        margin-top: 5vw;
-        font-size: 3vw;
-        grid-template-columns: 25vw 25vw 25vw 25vw;
+        margin-top: 2vw;
+        font-size: 2.4vw;
+        grid-template-columns: 18vw 18vw 15vw 22vw 20vw;
     }
 
     .mobile-author-container-2 {
@@ -1465,6 +1465,18 @@ html.w-mod-touch * {
         font-size: 4.6vw;
         width: 90%;
         padding-top: 4vw;
+    }
+
+    #overview h2 {
+        color: #2f2f2f;
+        font-family: Charter, Georgia, serif;
+        font-weight: normal;
+        font-size: 1.4vw;
+        padding-top: 1vw;
+        width: 45%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
     }
 
     #overview p {
