--- a/main.css
+++ b/main.css
@@ -133,7 +133,7 @@ body {
     font-size: 1vw;
     width: 45%;
     /* justify-content: center; */
-    padding-top: 2vw;
+    padding-top: 1vw;
     margin-left: auto;
     margin-right: auto;
     hyphens: auto;
@@ -1378,7 +1378,7 @@ html.w-mod-touch * {
     }
     
     #video_grid_mobile > .video_wrapper {
-        width: 75%;
+        width: 80%;
     }
     
     #video_grid_mobile > .video_wrapper > .video_container {
@@ -1681,6 +1681,7 @@ html.w-mod-touch * {
 
     .barplot > video {
         width: 48%;
+        display: none;
     }
 
     .scaling {
